# openstart

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.omo/run-continuation/: ses_101eb500cffeKhVMv5SoUYvdCY.json  ses_101f21882ffeS9frBmLEwGOsxK.json  ses_101f24506ffeKJW5fYRRnolttK.json  ses_101f27415ffeSgZ1D7VzhoCcSv.json  ses_101f89b04ffeODDOqdXdg7kUi0.json
src/: App.css  App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  commands.rs  lib.rs  logger.rs  main.rs  script.rs  settings.rs  storage.rs  terminal.rs  updater.rs
src-tauri/windows/: installer.nsh
