[package]
name = "openstart"
version = "1.0.1"
description = "Startup command launcher for Windows"
authors = ["you"]
license = "MIT"
repository = "https://github.com/purejiang/openstart"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
winreg = "0.52"
log = "0.4"
dirs = "5"
ureq = { version = "2", features = ["json"] }
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Security"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
